Log clientCredentialId with request path